[tool.poetry]
name = "yamt"
version = "0.1.0"
description = ""
authors = ["vodkar <boombarah@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
traits = "^6.3.1"
pydantic = "^1.8.2"
pysnmp = "^4.4.12"
Expression = "^1.1.0"
paramiko = "^2.8.0"
asyncssh = "^2.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 109