[tool.poetry]
name = "yamt"
version = "0.1.0"
description = ""
authors = ["vodkar <boombarah@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
traits = "^6.3.1"
pydantic = "^1.8.2"
pysnmp = "^4.4.12"
paramiko = "^2.8.0"
asyncssh = "^2.7.2"
scapy = "^2.4.5"
prompt-toolkit = "^3.0.23"
aioreactive = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
pytest-asyncio = "^0.16.0"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 109

[tool.isort]
profile = "black"
